adjust styles for the following: - convert px to em - update stopwatch-laps with max-height and overflow-y scroll to manage list growth

--- a/src/StopWatch.css
+++ b/src/StopWatch.css
@@ -2,6 +2,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100vh;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,14 +10,12 @@ body {
 }
 
 .stopwatch-container {
-  padding: 30px;
-  border-radius: 10px;
+  padding: 2em;
+  border-radius: 1em;
   background: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin: 5px;
-  width: 100%;
-  max-width: 400px;
+  margin: 0.5em;
   box-sizing: border-box;
+  width: 27.5em;
 }
 
 .stopwatch-timer {
@@ -25,13 +24,13 @@ body {
   justify-content: center;
   text-align: center;
   color: #333;
-  width: 170px;
-  height: 170px;
-  padding: 10px;
-  font-size: 32px;
+  width: 7em;
+  height: 7em;
+  padding: 0.5em;
+  font-size: 2em;
   box-shadow: 0 0 6px rgba(47, 128, 237, 0.7);
   border-radius: 50%;
-  letter-spacing: 3px;
+  letter-spacing: 0.2em;
   line-height: 1;
   margin: 0 auto;
 }
@@ -39,19 +38,19 @@ body {
 .stopwatch-buttons {
   display: flex;
   justify-content: center;
-  gap: 10px;
-  margin-top: 20px;
+  gap: 1em;
+  margin-top: 1.25em;
 }
 
 .stopwatch-button {
-  width: 80px;
-  padding: 10px 20px;
+  width: 5em;
+  padding: 0.5em 1em;
   border: none;
-  margin: 5px;
-  border-radius: 4px;
+  margin: 0.3em;
+  border-radius: 0.4em;
   cursor: pointer;
   color: #fff;
-  font-size: 16px;
+  font-size: 1.3em;
   transition: all 0.3s ease;
 }
 
@@ -76,14 +75,16 @@ body {
 }
 
 .stopwatch-laps {
-  margin-top: 20px;
+  margin-top: 1.25em;
+  max-height: 13em;
+  overflow-y: scroll;
 }
 
 .stopwatch-laps h3 {
   text-align: center;
   display: flex;
   justify-content: space-between;
-  margin: 5px;
+  margin: 0.5em;
   color: #333;
 }
 
@@ -97,5 +98,5 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0px 5px 10px 5px;
+  margin: 0.2em 0.5em 1em 0.5em;
 }
